--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "portfolio",
+  "name": "mindplane-portfolio",
   "version": "1.0.0",
-  "description": "Personal portfolio website",
-  "main": "index.js",
+  "description": "Minimal motion portfolio for Maharshi Desai",
+  "main": "server.js",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "live-server",
-    "build": "echo 'No build step required'"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": ["portfolio"],
-  "author": "Maharshi",
+  "keywords": ["portfolio", "gsap", "motion"],
+  "author": "Maharshi Desai",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "compression": "^1.7.4"
+  },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "nodemon": "^3.0.1"
   }
 }
